--- a/style.css
+++ b/style.css
@@ -15,6 +15,16 @@
     color:white;
 }
 
+
+.banner{
+    width: 100%;
+    height: 25rem;
+    border: 5px solid rgb(211, 243, 253);
+    background-image: url(recursos/banner.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 .grilla-principal{
     background-color:aquamarine;
 }
