--- a/style.css
+++ b/style.css
@@ -92,6 +92,20 @@
     font-weight: bold;
 }
 
+.grafico{
+    width: 75%;
+    height: 75%
+}
+
+.carousel-inner img {
+    width: 100%;
+    max-height: 500px;
+}
+
+.carousel-inner{
+ height: 500px;
+}
+
 
 @media screen and (max-width:768px) {
     .grilla-principal{
@@ -109,4 +123,6 @@
     .fila-datos-basicos h1, h3, p{
         font-size: .8rem;
     }
+
+
 }
