--- a/MiPortfolio3/src/app/components/nav-bar/nav-bar.component.html
+++ b/MiPortfolio3/src/app/components/nav-bar/nav-bar.component.html
@@ -9,64 +9,17 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
+        <!--Lista de redes-->
         <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">
-                <fa-icon [icon]="faceIcon" class="fa-2x"></fa-icon>
-            </a>
+          <li class="nav-item" *ngFor="let socialNet of socialNetList">
+            <app-social-net [socialNet]="socialNet"></app-social-net>
           </li>
+          <!--user login-->
           <li class="nav-item">
-            <a class="nav-link" href="#">
-                <fa-icon [icon]="instaIcon" class="fa-2x"></fa-icon>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-                <fa-icon [icon]="linkedinIncon" class="fa-2x"></fa-icon>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-                <fa-icon [icon]="tweetIcon" class="fa-2x"></fa-icon>
-            </a>
-          </li>
-          <li class="nav-item">
-            <!-- Button trigger modal -->
-            <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#loginModal">
-                <fa-icon [icon]="userIcon" class="fa-user fa-3x"></fa-icon>
-            </button>
+            <app-login></app-login>
           </li>
         </ul>
       </div>
-    </div>
-
-    <!-- Modal -->
-    <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Login</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <div class="mb-3 row">
-                    <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
-                    <div class="col-sm-10">
-                    <input type="text" class="form-control-plaintext" id="staticEmail" value="email@example.com">
-                    </div>
-                </div>
-                <div class="mb-3 row">
-                    <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
-                    <div class="col-sm-10">
-                    <input type="password" class="form-control" id="inputPassword">
-                    </div>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary">Iniciar sesión</button>
-            </div>
-        </div>
-        </div>
     </div>
 </nav>
 
