--- a/MiPortfolio3/src/app/principal-info/components/principal-info/principal-info.component.html
+++ b/MiPortfolio3/src/app/principal-info/components/principal-info/principal-info.component.html
@@ -1,1 +1,14 @@
-<p>principal-info works!</p>
+<!--Grilla principal de contenido --> 
+<div class="container-sm text-center grilla-principal">
+    <div class="row">
+        <!--Columna izquierda-->
+        <div class="col-5 mi-col mi-col-izquierda">
+            <app-profile-image [profilePicture]="profilePicture"></app-profile-image>
+        </div>
+
+        <!--Columna derecha-->
+        <div class="col-7 mi-col mi-col-derecha">
+            <p>col der</p>
+        </div>
+    </div>
+</div>
