Se agregó ContactComponent & ContactItemComponent

--- a/MiPortfolio3/src/app/principal-info/components/principal-info/principal-info.component.html
+++ b/MiPortfolio3/src/app/principal-info/components/principal-info/principal-info.component.html
@@ -4,6 +4,7 @@
         <!--Columna izquierda-->
         <div class="col-5 mi-col mi-col-izquierda">
             <app-profile-image [profilePicture]="profilePicture"></app-profile-image>
+            <app-contact></app-contact>
         </div>
 
         <!--Columna derecha-->
