Agregado de SoftwareComponent & SoftwareItemComponent

--- a/MiPortfolio3/src/app/principal-info/components/principal-info/principal-info.component.html
+++ b/MiPortfolio3/src/app/principal-info/components/principal-info/principal-info.component.html
@@ -5,6 +5,7 @@
         <div class="col-5 mi-col mi-col-izquierda">
             <app-profile-image [profilePicture]="profilePicture"></app-profile-image>
             <app-contact></app-contact>
+            <app-softwares></app-softwares>
         </div>
 
         <!--Columna derecha-->
