--- a/MiPortfolio3/src/app/principal-info/components/software-item/software-item.component.html
+++ b/MiPortfolio3/src/app/principal-info/components/software-item/software-item.component.html
@@ -2,23 +2,38 @@
     <span>{{softwareItem.name}}</span>
     <article>
         <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" [name]="softwareItem.name" [id]="softwareItem.name+1" value="option1">
+            <input class="form-check-input" type="radio"
+             [name]="softwareItem.name" [id]="softwareItem.name+1" 
+             value="option1" [(ngModel)]= "softwareItem.value"
+            >
             <label [for]="softwareItem.name+1" class="form-check-label">1</label>
         </div>
         <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" [name]="softwareItem.name" [id]="softwareItem.name+2" value="option2">
+            <input class="form-check-input" type="radio"
+             [name]="softwareItem.name" [id]="softwareItem.name+2"
+             value="option2"  [(ngModel)]= "softwareItem.value"
+            >
             <label [for]="softwareItem.name+2" class="form-check-label">2</label>
         </div>
         <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" [name]="softwareItem.name" [id]="softwareItem.name+3" value="option3">
+            <input class="form-check-input" type="radio"
+             [name]="softwareItem.name" [id]="softwareItem.name+3"
+             value="option3" [(ngModel)]= "softwareItem.value"
+            >
             <label [for]="softwareItem.name+3" class="form-check-label">3</label>
         </div>
         <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" [name]="softwareItem.name" [id]="softwareItem.name+4" value="option4">
+            <input class="form-check-input" type="radio"
+             [name]="softwareItem.name" [id]="softwareItem.name+4"
+             value="option4" [(ngModel)]= "softwareItem.value"
+            >
             <label [for]="softwareItem.name+4" class="form-check-label">4</label>
         </div>
         <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" [name]="softwareItem.name" [id]="softwareItem.name+5" value="option5">
+            <input class="form-check-input" type="radio"
+             [name]="softwareItem.name" [id]="softwareItem.name+5"
+             value="option5" [(ngModel)]= "softwareItem.value"
+            >
             <label [for]="softwareItem.name+5" class="form-check-label">5</label>
         </div>
     </article>
