--- a/MiPortfolio3/src/app/principal-info/components/principal-info/principal-info.component.html
+++ b/MiPortfolio3/src/app/principal-info/components/principal-info/principal-info.component.html
@@ -6,6 +6,7 @@
             <app-profile-image [profilePicture]="profilePicture"></app-profile-image>
             <app-contact></app-contact>
             <app-softwares></app-softwares>
+            <app-reference></app-reference>
         </div>
 
         <!--Columna derecha-->
