Terminada seccion de columna izquierda, e inicio con columna derecha: Implementado UserComponent, ProfessionalExpComponent & ProfessioanlExpItemComponent

--- a/MiPortfolio3/src/app/principal-info/components/principal-info/principal-info.component.html
+++ b/MiPortfolio3/src/app/principal-info/components/principal-info/principal-info.component.html
@@ -7,11 +7,13 @@
             <app-contact></app-contact>
             <app-softwares></app-softwares>
             <app-reference></app-reference>
+            <app-idioms></app-idioms>
         </div>
 
         <!--Columna derecha-->
         <div class="col-7 mi-col mi-col-derecha">
-            <p>col der</p>
+            <app-user></app-user>
+            <app-professional-exp></app-professional-exp>
         </div>
     </div>
 </div>
