Implementado InterestsComponent & InterestItemComponent. Implementado routing para dichos componentes

--- a/MiPortfolio3/src/app/principal-info/components/principal-info/principal-info.component.css
+++ b/MiPortfolio3/src/app/principal-info/components/principal-info/principal-info.component.css
@@ -13,3 +13,13 @@
 .mi-col-derecha{
     background-color: white
 }
+
+a{
+    background-color:rgb(8, 8, 8);
+    border-radius: 8px;
+    font-size:1.5rem;
+    font-weight:bold;
+    text-decoration: none;
+    display:flex;
+    width:24%
+}
