--- a/MiPortfolio3/src/app/principal-info/components/principal-info/principal-info.component.html
+++ b/MiPortfolio3/src/app/principal-info/components/principal-info/principal-info.component.html
@@ -4,6 +4,9 @@
         <!--Columna izquierda-->
         <div class="col-5 mi-col mi-col-izquierda">
             <app-profile-image [profilePicture]="profilePicture"></app-profile-image>
+
+            <a routerLink="/interests" aria-current="interests-page">Intereses</a>
+            
             <app-contact></app-contact>
             <app-softwares></app-softwares>
             <app-reference></app-reference>
@@ -13,7 +16,12 @@
         <!--Columna derecha-->
         <div class="col-7 mi-col mi-col-derecha">
             <app-user></app-user>
+
+            <router-outlet></router-outlet>
+            
             <app-professional-exp></app-professional-exp>
+            <app-education></app-education>
+            <!--<app-interests></app-interests>-->
         </div>
     </div>
 </div>
