--- a/MiPortfolio3/src/app/principal-info/components/professional-exp/professional-exp.component.html
+++ b/MiPortfolio3/src/app/principal-info/components/professional-exp/professional-exp.component.html
@@ -1,6 +1,6 @@
 <div class="container-sm">
     <h4 class="encabezado">
-      EXPERIENCIA PROFESIONAL
+      EXPERIENCIA PROFESIONAL <a routerLink="/" aria-curren="home-page">[hidde]</a>
       <fa-icon [icon]="addIcon"></fa-icon>
     </h4>
     <div class="container" *ngFor="let profession of professionalExpItems">
