--- a/MiPortfolio3/src/app/principal-info/components/education/education.component.html
+++ b/MiPortfolio3/src/app/principal-info/components/education/education.component.html
@@ -1,6 +1,6 @@
 <div class="container-sm">
     <h4 class="encabezado">
-      EDUCACIÓN
+      EDUCACIÓN <a routerLink="/" aria-curren="home-page">[hidde]</a>
       <fa-icon [icon]="addIcon"></fa-icon>
     </h4>
     <div class="container" *ngFor="let education of educationItems">
