--- a/MiPortfolio3/src/app/principal-info/components/principal-info/principal-info.component.css
+++ b/MiPortfolio3/src/app/principal-info/components/principal-info/principal-info.component.css
@@ -14,12 +14,16 @@
     background-color: white
 }
 
+.link{
+    display: flex;
+    justify-content: space-between;
+}
+
 a{
     background-color:rgb(8, 8, 8);
     border-radius: 8px;
-    font-size:1.5rem;
+    font-size:1.3rem;
     font-weight:bold;
     text-decoration: none;
-    display:flex;
-    width:24%
+
 }
