Implementado Project module, ProjectsComponent & ProjectItemComponent

--- a/MiPortfolio3/src/app/app.component.html
+++ b/MiPortfolio3/src/app/app.component.html
@@ -2,3 +2,4 @@
 <app-banner></app-banner>
 <app-principal-info></app-principal-info>
 <app-skills-section></app-skills-section>
+<app-projects></app-projects>
