Trabajando con formulario para agregar nueva red social

--- a/MiPortfolio3/src/app/components/nav-bar/nav-bar.component.html
+++ b/MiPortfolio3/src/app/components/nav-bar/nav-bar.component.html
@@ -4,7 +4,10 @@
       <a class="navbar-brand" href="#">
         <img src="../../../assets/images/APLogo-20-20.png" alt="argpprod">
       </a>
-      <fa-icon [icon]="editIcon" class="edit-redes fa-3x"></fa-icon>
+      
+      <!--Iconos de agregacion-->
+      <fa-icon [icon]="addIcon" class="edit-redes fa-3x" (click)="toogleForm()"></fa-icon>
+
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -12,7 +15,7 @@
         <!--Lista de redes-->
         <ul class="navbar-nav">
           <li class="nav-item" *ngFor="let socialNet of socialNetList">
-            <app-social-net [socialNet]="socialNet"></app-social-net>
+            <app-social-net [socialNet]="socialNet"></app-social-net> 
           </li>
           <!--user login-->
           <li class="nav-item">
@@ -22,5 +25,10 @@
       </div>
     </div>
 </nav>
+
+<div class="container-sm">
+  <app-social-net-form *ngIf="formActive"></app-social-net-form>
+</div>
+
 
 
