--- a/MiPortfolio3/src/app/components/social-net/social-net.component.html
+++ b/MiPortfolio3/src/app/components/social-net/social-net.component.html
@@ -1,3 +1,3 @@
 <a class="nav-link active" aria-current="page" [href]="socialNet.link" target="_blank">
-    <fa-icon [icon]="socialNet.faIcon" class="fa-2x"></fa-icon>
+    <fa-icon *ngIf="socialNet.icon" [icon]="socialNet.icon" class="fa-2x"></fa-icon>
 </a>
