--- a/MiPortfolio3/src/app/components/nav-bar/nav-bar.component.html
+++ b/MiPortfolio3/src/app/components/nav-bar/nav-bar.component.html
@@ -12,11 +12,13 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
+
         <!--Lista de redes-->
         <ul class="navbar-nav">
           <li class="nav-item" *ngFor="let socialNet of socialNetList">
             <app-social-net [socialNet]="socialNet"></app-social-net> 
           </li>
+
           <!--user login-->
           <li class="nav-item">
             <app-login></app-login>
@@ -27,7 +29,7 @@
 </nav>
 
 <div class="container-sm">
-  <app-social-net-form *ngIf="formActive"></app-social-net-form>
+  <app-social-net-form *ngIf="formActive"  (newSocialNetEvent)="addSocialNetwork($event)"></app-social-net-form>
 </div>
 
 
