--- a/MiPortfolio3/src/app/components/social-net-form/social-net-form.component.html
+++ b/MiPortfolio3/src/app/components/social-net-form/social-net-form.component.html
@@ -10,9 +10,11 @@
                 <option value="twitter">Twitter</option>
                 <option value="youtube">You Tube</option>
             </select>
+            <p class = "error" *ngIf="IconName?.touched && IconName?.errors">Este campo no puede quedar vacío</p>
         </div>
         <div class="col">
             <input class="form-control" type="text" formControlName="link" placeholder="Pegue aquí el link de su red social" aria-label="default input example">
+            <p class = "error" *ngIf="Link?.touched && Link?.errors">Este campo no puede quedar vacío</p>
         </div>
         </div>
         <div class="row">
