--- a/MiPortfolio3/src/app/components/nav-bar/nav-bar.component.html
+++ b/MiPortfolio3/src/app/components/nav-bar/nav-bar.component.html
@@ -7,6 +7,7 @@
       
       <!--Iconos de agregacion-->
       <fa-icon [icon]="addIcon" class="edit-redes fa-3x" (click)="toogleForm()"></fa-icon>
+      <!--------------------------------->
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -16,7 +17,10 @@
         <!--Lista de redes-->
         <ul class="navbar-nav">
           <li class="nav-item" *ngFor="let socialNet of socialNetList">
-            <app-social-net [socialNet]="socialNet"></app-social-net> 
+            <app-social-net 
+              [socialNet]="socialNet"
+              (socialNetEvent)="modifySocialNetIncoming($event)"
+            ></app-social-net> 
           </li>
 
           <!--user login-->
@@ -29,7 +33,10 @@
 </nav>
 
 <div class="container-sm">
-  <app-social-net-form *ngIf="formActive"  (newSocialNetEvent)="addSocialNetwork($event)"></app-social-net-form>
+  <app-social-net-form *ngIf="formActive"  
+    (newSocialNetEvent)="addSocialNetwork($event)"
+    [socialNetToModify]="socialNetToModify"
+  ></app-social-net-form>
 </div>
 
 
