Implementada la eliminación de una red social

--- a/MiPortfolio3/src/app/components/nav-bar/nav-bar.component.html
+++ b/MiPortfolio3/src/app/components/nav-bar/nav-bar.component.html
@@ -20,6 +20,7 @@
             <app-social-net 
               [socialNet]="socialNet"
               (socialNetEvent)="modifySocialNetIncoming($event)"
+              (idSocialNetEvent)="removeSocialNetIncoming($event)"
             ></app-social-net> 
           </li>
 
