--- a/MiPortfolio3/src/app/principal-info/components/profile-image/profile-image.component.css
+++ b/MiPortfolio3/src/app/principal-info/components/profile-image/profile-image.component.css
@@ -1,6 +1,10 @@
 .img-perfil{
-    width:50%;
-    height:50%;
+    width:15rem;
+    height:15rem;
     border-radius: 50%;
     margin-top: 5%;
+}
+
+.btn{
+    width: 100%;
 }
