--- a/MiPortfolio3/src/app/principal-info/components/softwares/softwares.component.html
+++ b/MiPortfolio3/src/app/principal-info/components/softwares/softwares.component.html
@@ -1,11 +1,31 @@
 <div class="container-sm">
     <h4 class="encabezado">
       SOFTWARES
-      <fa-icon [icon]="addIcon"></fa-icon>
+      <fa-icon [icon]="addIcon" class="add-icon" (click)="toggleAddSoftware()"></fa-icon>
     </h4>
+
+    <div class="container-sm" *ngIf="addFormActivated">
+        <form [formGroup] = "softwareForm" (ngSubmit)="onSend($event)">
+            <input
+                formControlName="name" 
+                class="form-control form-control-sm" 
+                type="text" placeholder="Nombre del software..." 
+                aria-label=".form-control-sm example"
+            >
+            <p class="error" *ngIf="Name?.touched && Name?.errors">
+                Este campo no puede estar vacío!
+            </p>
+            <button type="submit" class="btn btn-primary">Guardar</button>
+        </form>
+    </div>
+
     <ul class="list-group">
         <li class="list-group-item list-group-item-info" *ngFor="let software of softwareItems">
-            <app-software-item [softwareItem]="software"></app-software-item>
+            <app-software-item 
+                [softwareItem]="software" 
+                (softwareItemEvent)="modifiedSoftwareRecived($event)"
+                (softwareItemToRemove)="removeSoftware($event)"    
+            ></app-software-item>
         </li>
     </ul>
 </div>
