--- a/MiPortfolio3/src/app/principal-info/components/reference/reference.component.html
+++ b/MiPortfolio3/src/app/principal-info/components/reference/reference.component.html
@@ -1,8 +1,30 @@
 <div class="container-sm text-start ">
     <h4 class="encabezado">
       REFERENCIA
-      <fa-icon [icon]="editIcon"></fa-icon>
+      <fa-icon [icon]="editIcon" class="edit-icon" (click)="toggleEdition()"></fa-icon>
     </h4>
+  
+    <form [formGroup]="referenceForm" *ngIf="editionActivated" (ngSubmit)="onSend($event)">
+      <input formControlName = "name" class="form-control form-control-sm" type="text" placeholder="Nombre" aria-label=".form-control-sm example">
+      <p class="error" *ngIf="Name?.touched && Name?.errors">Este campo no puede quedar vacío</p>
+      
+      <input formControlName = "surname" class="form-control form-control-sm" type="text" placeholder="Apellido" aria-label=".form-control-sm example">
+      <p class="error" *ngIf="Surname?.touched && Surname?.errors">Este campo no puede quedar vacío</p>
+      
+      <input formControlName = "position" class="form-control form-control-sm" type="text" placeholder="Posición o cargo actual" aria-label=".form-control-sm example">
+      <p class="error" *ngIf="Position?.touched && Position?.errors">Este campo no puede quedar vacío</p>
+      
+      <input formControlName = "phone" class="form-control form-control-sm" type="text" placeholder="Teléfono/Celular" aria-label=".form-control-sm example">
+      <p class="error" *ngIf="Phone?.touched && Phone?.errors?.['required']">Este campo no puede quedar vacío</p>
+      <p class="error" *ngIf="Phone?.touched && Phone?.errors?.['pattern']">Deben colocarse solo números</p>
+      
+      <input formControlName = "email" class="form-control form-control-sm" type="text" placeholder="e-mail" aria-label=".form-control-sm example">
+      <p class="error" *ngIf="Email?.touched && Email?.errors?.['required']">Este campo no puede quedar vacío</p>
+      <p class="error" *ngIf="Email?.touched && Email?.errors?.['email']">Debe colocarse un e-mail</p>
+
+      <button type="submit" class="btn btn-primary">Primary</button>
+    </form>
+
     <h5>{{reference.name}} {{reference.surname}}</h5>
     <h6 class="cargo">{{reference.position}}</h6>
     <div class="container text-center">
