Implementado Añadido en Experiencia Profesional

--- a/MiPortfolio3/src/app/principal-info/components/principal-info/principal-info.component.html
+++ b/MiPortfolio3/src/app/principal-info/components/principal-info/principal-info.component.html
@@ -25,11 +25,11 @@
         <div class="col-7 mi-col mi-col-derecha">
             <app-user></app-user>
 
-            <router-outlet></router-outlet>
+            <!--<router-outlet></router-outlet>-->
             
-        <!--<app-professional-exp></app-professional-exp>
+            <app-professional-exp></app-professional-exp>
             <app-education></app-education>
-            <app-interests></app-interests>-->
+            <app-interests></app-interests>
         </div>
     </div>
 </div>
