--- a/MiPortfolio3/src/app/principal-info/components/professional-exp/professional-exp.component.html
+++ b/MiPortfolio3/src/app/principal-info/components/professional-exp/professional-exp.component.html
@@ -1,8 +1,63 @@
 <div class="container-sm">
     <h4 class="encabezado">
       EXPERIENCIA PROFESIONAL <a routerLink="/" aria-curren="home-page">[hidde]</a>
-      <fa-icon [icon]="addIcon"></fa-icon>
+      <fa-icon [icon]="addIcon" class="add-icon" (click)="toggleForm()"></fa-icon>
     </h4>
+
+    <!--FORMULARIO-->
+    <div class="conainer text-center formulario" *ngIf="formActivated">
+      <form [formGroup]="experienceForm" (ngSubmit)="onSend($event)">
+        <div class="row">
+          <div class="col en-linea">
+            <label>Fecha de inicio: </label>
+            <input class="form-control fecha" formControlName="startDate" type="date" aria-label=".form-control-sm example">
+            <p class="error" *ngIf="StartDate?.touched && StartDate?.errors?.['required']">El campo no puede quedar vacío</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col en-linea">
+            <label>Fecha de finalización: </label>
+            <input class="form-control fecha" formControlName="endDate" type="date" aria-label=".form-control-sm example">
+            <p class="error" *ngIf="EndDate?.touched && EndDate?.errors?.['required']"> El campo no puede quedar vacío </p>
+          </div>
+        </div>
+        
+        <div class="row">
+          <div class="col en-linea">
+            <label>Ciudad: </label>
+            <input class="form-control normal" formControlName="city" type="text"  aria-label=".form-control-sm example">
+            <p class="error" *ngIf="City?.touched && City?.errors?.['required']"> El campo no puede quedar vacío </p>
+            
+            <label>País: </label>
+            <input class="form-control normal" formControlName="country" type="text" aria-label=".form-control-sm example">
+            <p class="error" *ngIf="Country?.touched && Country?.errors?.['required']"> El campo no puede quedar vacío </p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col">
+            <input class="form-control" formControlName="enterpriseName" type="text" placeholder="Nombre de la empresa" aria-label=".form-control-sm example">
+            <p class="error" *ngIf="EnterpriseName?.touched && EnterpriseName?.errors?.['required']"> El campo no puede quedar vacío </p>
+            
+            <input class="form-control" formControlName="position" type="text" placeholder="Posición o cargo ocupado" aria-label=".form-control-sm example">
+            <p class="error" *ngIf="Position?.touched && Position?.errors?.['required']"> El campo no puede quedar vacío </p>
+            
+            <label for="FormControlTextarea1" class="form-label">Descripción:</label>
+            <textarea class="form-control" formControlName="description" id="FormControlTextarea1" rows="3"></textarea>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col">
+            <button type="submit" class="btn btn-primary">Guardar</button>
+          </div>
+        </div>
+
+      </form>
+    </div>
+    <!----------------------------->
+
     <div class="container" *ngFor="let profession of professionalExpItems">
       <app-professional-exp-item [professionalExp]="profession"></app-professional-exp-item>
     </div>
