--- a/MiPortfolio3/src/app/principal-info/components/professional-exp/professional-exp.component.css
+++ b/MiPortfolio3/src/app/principal-info/components/professional-exp/professional-exp.component.css
@@ -1,3 +1,36 @@
 a{
     font-size: 1rem;
 }
+
+.formulario{
+    margin-bottom: 15%;
+}
+
+label{
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+.en-linea{
+    display: flex;
+    flex-direction: row;
+    column-gap: 1rem;
+}
+
+.fecha{
+    width: 30%;
+    height: 80%;
+}
+
+.normal{
+    width: 50%;
+    height: 80%;
+}
+
+.btn{
+    width: 100%;
+}
+
+.error{
+    color:red;
+}
